# Rust_C_Interop_Templates

./: README.md
c_from_rust_test/interop_test/: Cargo.toml  README.md  bindings.h  build.rs
c_from_rust_test/interop_test/c_prog/: Makefile  main.c  main.h
c_from_rust_test/interop_test/src/: main.rs
rust_from_c_test/interop_test/: Cargo.toml  README.md
rust_from_c_test/interop_test/c_prog/: Makefile  main.c  main.h
rust_from_c_test/interop_test/src/: lib.rs
stm32_c_from_rust_blink/interop_test/: Cargo.toml  README.md  build.rs  openocd.cfg
stm32_c_from_rust_blink/interop_test/.cargo/: config
stm32_c_from_rust_blink/interop_test/c_prog/: Makefile
stm32_c_from_rust_blink/interop_test/src/: main.rs
stm32_rust_from_c_blink/interop_test/: Cargo.toml  README.md
stm32_rust_from_c_blink/interop_test/c_prog/: Makefile  STM32L031K6T6_core.S  main.c  main.h
stm32_rust_from_c_blink/interop_test/src/: lib.rs
